--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style/style.css">
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
@@ -15,51 +16,77 @@
   </style>
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
-
-  We are creatives
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
+  <header>
+    <a href="/"><img src="./images/logo.svg" alt="logo"></a>
+    <nav>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><button  >Contact</button></li>
+      </ul>
+    </nav>
+  </header>
+  <article>
+    <section class="intro">
+      <h1>We are creatives</h1>
+    </section>
+    <section class="img-grid">
+      <div class="item">
+        <h3>Transform your brand</h3>
+        <p>We are a full-service creative agency specializing in helping brands grow fast.
+        Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <a href="#">Learn more</a>
+      </div>
+      <div class="item img1"></div>
+      <div class="item">
+        <h3>Stand out to the right audience</h3>
+        <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and
+        extend your brand in digital places.</p>
+      <a href="#">Learn more</a>
+      </div>
+      <div class="item">
+        <h4>Graphic design</h4>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’
+        attention.</p>
+      </div>
+      <div class="item">
+        <h4>Photography</h4>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </div>
+    </section>
+    <section class="testimonials">
+      <h4>Client testimonials</h4>
+      <div class="client-list">
+      <div class="client">
+        <img class="client-profile" src="./images/image-emily.jpg" alt="Emily">
+        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <h4>Emily R.</h4>
+        <h6>Marketing Director</h6>
+      </div>
+      <div class="client">
+        <img class="client-profile" src="./images/image-thomas.jpg" alt="Thomas">
+        <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
+        experience.</p>
+        <h4>Thomas S.</h4>
+        <h6>Chief Operating Officer</h6>
+      </div>
+      <div class="client">
+        <img class="client-profile" src="./images/image-jennie.jpg" alt="Jennie">
+        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <h4>Jennie F.</h4>
+        <h6>Business Owner</h6>
+      </div>
+      </div>
+    </section>
+  </article>
+  <footer class="footer">
+    <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Projects</a></li>
+    </ul>
+  </footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
