--- a/index.html
+++ b/index.html
@@ -29,34 +29,38 @@
   </header>
   <article>
     <section class="intro">
-      <h1>We are creatives</h1>
+      <h1>W E   A R E   C R E A T I V E S </h1>
+      <img src="./images/icon-arrow-down.svg" alt="arrow-down">
     </section>
     <section class="img-grid">
-      <div class="item">
-        <h3>Transform your brand</h3>
-        <p>We are a full-service creative agency specializing in helping brands grow fast.
-        Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <a href="#">Learn more</a>
+      <div class="item transform">
+        <div class="text-square">
+          <h3>Transform your brand</h3>
+          <p>We are a full-service creative agency specializing in helping brands grow fast.
+            Engage your clients through compelling visuals that do most of the marketing for you.</p>
+          <a href="#">Learn more</a>
+        </div>
+        <img src="./images/desktop/image-transform.jpg" alt="transform">
       </div>
-      <div class="item img1"></div>
-      <div class="item">
+      </div>
+      <div class="item audience">
         <h3>Stand out to the right audience</h3>
         <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and
         extend your brand in digital places.</p>
       <a href="#">Learn more</a>
       </div>
-      <div class="item">
+      <div class="item img3">
         <h4>Graphic design</h4>
         <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’
         attention.</p>
       </div>
-      <div class="item">
+      <div class="item img4">
         <h4>Photography</h4>
         <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </div>
     </section>
     <section class="testimonials">
-      <h4>Client testimonials</h4>
+      <h4 class="testimonial-title">Client testimonials</h4>
       <div class="client-list">
       <div class="client">
         <img class="client-profile" src="./images/image-emily.jpg" alt="Emily">
@@ -81,10 +85,23 @@
     </section>
   </article>
   <footer class="footer">
-    <ul>
+    <div class="footer-images">
+      <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles">
+      <img src="./images/desktop/image-gallery-orange.jpg" alt="orange">
+      <img src="./images/desktop/image-gallery-cone.jpg" alt="cone">
+      <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes">
+    </div>
+    <a href="#"><img src="./images/logo.svg" alt="logo-footer"></a>
+    <ul class="footer-nav">
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Projects</a></li>
+    </ul>
+    <ul class="social-icons">
+      <li><a href="/"><img src="./images/icon-facebook.svg" alt="fb"></a></li>
+      <li><a href="/"><img src="./images/icon-instagram.svg" alt="ig"></a></li>
+      <li><a href="/"><img src="./images/icon-twitter.svg" alt="twitter"></a></li>
+      <li><a href="/"><img src="./images/icon-pinterest.svg" alt="pinterest"></a></li>
     </ul>
   </footer>
   <div class="attribution">
