Adjust layout for both photogrids and footer

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
       </div>
       </div>
       <div class="item audience">
-        <h3>Stand out to the right audience</h3>
-        <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and
-        extend your brand in digital places.</p>
-      <a href="#">Learn more</a>
+        <div class="text-square">
+          <h3>Stand out to the right audience</h3>
+          <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and
+          extend your brand in digital places.</p>
+          <a href="#">Learn more</a>
+        </div>
+        <img src="./images/desktop/image-stand-out.jpg" alt="stand-out">
       </div>
       <div class="item img3">
         <h4>Graphic design</h4>
