--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             Engage your clients through compelling visuals that do most of the marketing for you.</p>
           <a href="#">Learn more</a>
         </div>
-        <img src="./images/desktop/image-transform.jpg" alt="transform">
+        <div class="img-square transform-img">
+          <img class="" src="./images/desktop/image-transform.jpg" alt="transform">
+        </div>
       </div>
       </div>
       <div class="item audience">
@@ -50,7 +52,9 @@
           extend your brand in digital places.</p>
           <a href="#">Learn more</a>
         </div>
-        <img src="./images/desktop/image-stand-out.jpg" alt="stand-out">
+        <div class="img-square stand-out-img">
+          <img class="" src="./images/desktop/image-stand-out.jpg" alt="stand-out">
+        </div>
       </div>
       <div class="item img3">
         <h4>Graphic design</h4>
@@ -63,7 +67,7 @@
       </div>
     </section>
     <section class="testimonials">
-      <h4 class="testimonial-title">Client testimonials</h4>
+      <h4 class="testimonial-title">CLIENT TESTIMONIALS</h4>
       <div class="client-list">
       <div class="client">
         <img class="client-profile" src="./images/image-emily.jpg" alt="Emily">
@@ -94,7 +98,7 @@
       <img src="./images/desktop/image-gallery-cone.jpg" alt="cone">
       <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes">
     </div>
-    <a href="#"><img src="./images/logo.svg" alt="logo-footer"></a>
+    <a class="logo-footer" href="#"><img src="./images/logo.svg" alt="logo-footer"></a>
     <ul class="footer-nav">
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
