Create mobile media query and toggler

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
   <header>
     <a href="/"><img src="./images/logo.svg" alt="logo"></a>
     <nav>
-      <ul>
+      <a class="burger"><img class="burger-icon" src="./images/icon-hamburger.svg" alt="burger-button"></a>
+      <ul class="menu">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
-        <li><button  >Contact</button></li>
+        <li><button >Contact</button></li>
       </ul>
     </nav>
   </header>
@@ -41,7 +42,7 @@
           <a href="#">Learn more</a>
         </div>
         <div class="img-square transform-img">
-          <img class="" src="./images/desktop/image-transform.jpg" alt="transform">
+          <img src="./images/desktop/image-transform.jpg" alt="transform">
         </div>
       </div>
       </div>
@@ -53,7 +54,7 @@
           <a href="#">Learn more</a>
         </div>
         <div class="img-square stand-out-img">
-          <img class="" src="./images/desktop/image-stand-out.jpg" alt="stand-out">
+          <img src="./images/desktop/image-stand-out.jpg" alt="stand-out">
         </div>
       </div>
       <div class="item img3">
@@ -115,5 +116,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script type="text/javascript" src="js/menu-toggle.js"></script>
 </body>
 </html>
