--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
-        <li><button >Contact</button></li>
+        <li><button type="submit">Contact</button></li>
       </ul>
     </nav>
   </header>
   <article>
     <section class="intro">
-      <h1>W E   A R E   C R E A T I V E S </h1>
+      <h1 class="intro-text">WE ARE CREATIVES</h1>
       <img src="./images/icon-arrow-down.svg" alt="arrow-down">
     </section>
     <section class="img-grid">
@@ -39,7 +39,7 @@
           <h3>Transform your brand</h3>
           <p>We are a full-service creative agency specializing in helping brands grow fast.
             Engage your clients through compelling visuals that do most of the marketing for you.</p>
-          <a href="#">Learn more</a>
+          <a class="item-Link" href="#">Learn more</a>
         </div>
         <div class="img-square transform-img">
           <img src="./images/desktop/image-transform.jpg" alt="transform">
@@ -51,7 +51,7 @@
           <h3>Stand out to the right audience</h3>
           <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and
           extend your brand in digital places.</p>
-          <a href="#">Learn more</a>
+          <a class="item-Link" href="#">Learn more</a>
         </div>
         <div class="img-square stand-out-img">
           <img src="./images/desktop/image-stand-out.jpg" alt="stand-out">
@@ -114,7 +114,7 @@
   </footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Marjoree E. F.</a>.
   </div>
   <script type="text/javascript" src="js/menu-toggle.js"></script>
 </body>
