--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <header>
@@ -58,12 +53,12 @@
         </div>
       </div>
       <div class="item img3">
-        <h4>Graphic design</h4>
+        <h2>Graphic design</h2>
         <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’
         attention.</p>
       </div>
       <div class="item img4">
-        <h4>Photography</h4>
+        <h2>Photography</h2>
         <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </div>
     </section>
@@ -116,6 +111,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Marjoree E. F.</a>.
   </div>
-  <script type="text/javascript" src="js/menu-toggle.js"></script>
+  <script type="text/javascript" src="./js/menu-toggle.js"></script>
 </body>
 </html>
