--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a class="item-Link" href="#">Learn more</a>
         </div>
         <div class="img-square transform-img">
-          <img src="./images/desktop/image-transform.jpg" alt="transform">
+          <!-- <img src="./images/desktop/image-transform.jpg" alt="transform"> -->
         </div>
       </div>
       </div>
@@ -49,7 +49,7 @@
           <a class="item-Link" href="#">Learn more</a>
         </div>
         <div class="img-square stand-out-img">
-          <img src="./images/desktop/image-stand-out.jpg" alt="stand-out">
+          <!-- <img src="./images/desktop/image-stand-out.jpg" alt="stand-out"> -->
         </div>
       </div>
       <div class="item img3">
