Update mobile menu styling

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style/style.css">
   
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <title>Sunnyside Agency | Home</title>
 
 </head>
 <body>
   <header>
-    <a href="/"><img src="./images/logo.svg" alt="logo"></a>
+    <a class="nav-logo" href="/"><img src="./images/logo.svg" alt="logo"></a>
     <nav>
       <a class="burger"><img class="burger-icon" src="./images/icon-hamburger.svg" alt="burger-button"></a>
       <ul class="menu">
