--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           <a class="item-Link" href="#">Learn more</a>
         </div>
         <div class="img-square stand-out-img">
-          <!-- <img src="./images/desktop/image-stand-out.jpg" alt="stand-out"> -->
+          <!-- <picture>
+            <img src="./images/desktop/image-stand-out.jpg" alt="stand-out">
+          </picture> -->
         </div>
       </div>
       <div class="item img3">
